--- a/angular-weather-widget/js/views/weather.html
+++ b/angular-weather-widget/js/views/weather.html
@@ -1,14 +1,21 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12">    
-      <div class="bg">
+    <div class="col-xs-12 bg">    
+      <div class="pull-left">
         <h3 class="title">{{data.city.name}}, {{data.city.country}}</h3>
+        <h4>{{data.city.coord.lat | number:4 }}, {{data.city.coord.lon | number:4 }}</h4>
       </div>
+      <div class="pull-right text-center">
+        <br />
+        <img src="img/clock.png" width="48" alt="Location" />
+        <br />
+        {{ currentTime }}
+      </div>      
     </div>
   </div>
-  <div class="row">
-    <div class="col-xs-2 weather-days today" ng-repeat="day in data.list | filter:!dt.today">
-      <h4>{{ day.dt.day  }}</h4>      
+  <div class="row">    
+  <div class="col-xs-2 weather-days today" ng-repeat="day in data.list | filter:!dt.today">
+      <h3>{{ day.dt.day  }}</h3>      
       <span class="temp-title">
         {{ day.temp.day}}&deg;
       </span><br /><br />
@@ -18,7 +25,7 @@
     </div>
     <div class="col-xs-10">
       <div class="row">    
-        <div class="weather-days col-xs-2" ng-repeat="day in data.list" ng-show="!day.dt.today">    
+        <div class="weather-days col-xs-12 col-md-2" ng-repeat="day in data.list" ng-show="!day.dt.today">    
           <div>
             <span class="badge">
               {{ day.dt.day  }}
